syntax = "proto3";

package conf;

option go_package = "github.com/menta2k/kratos-bootstrap/gen/api/go/conf/v1;conf";

import "google/protobuf/duration.proto";

//Register Discovery Center
message Registry {
  // Consul
  message Consul {
    string scheme = 1;
    string address = 2;
    bool health_check = 3;
  }

  // Etcd
  message Etcd {
    repeated string endpoints = 1;
  }

  // ZooKeeper
  message ZooKeeper {
    repeated string endpoints = 1;
    google.protobuf.Duration timeout = 2;
  }

  // Nacos
  message Nacos {
    string address = 1;
    uint64 port = 2;
    string namespace_id = 3;
    string log_level = 4;
    string cache_dir = 5;
    string log_dir = 6;
    int32 update_thread_num = 7;
    google.protobuf.Duration timeout = 8;
    google.protobuf.Duration beat_interval = 9;
    bool not_load_cache_at_start = 10;
    bool update_cache_when_empty = 11;
  }

  // Kubernetes
  message Kubernetes {

  }

  // Eureka
  message Eureka {
    repeated string endpoints = 1;
    google.protobuf.Duration heartbeat_interval = 2;
    google.protobuf.Duration refresh_interval = 3;
    string path = 4;
  }

  // Polaris
  message Polaris {
    string address = 1;
    int32 port = 2;
    int32 instance_count = 3;
    string namespace = 4;
    string service = 5;
    string token = 6;
  }

  // Servicecomb
  message Servicecomb {
    repeated string endpoints = 1;
  }

  string type = 1;

  Consul consul = 2;  // Consul
  Etcd etcd = 3;  // Etcd
  ZooKeeper zookeeper = 4;  // ZooKeeper
  Nacos nacos = 5;  // Nacos
  Kubernetes kubernetes = 6;  // Kubernetes
  Eureka eureka = 7;  // Eureka
  Polaris polaris = 8;  // Polaris
  Servicecomb servicecomb = 9;  // Servicecomb
}
